# EazyLiving

./: .gitignore  DEVELOPMENT.md  README.md  alembic.ini  package-lock.json  pyproject.toml
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/scripts/: smoke-mocks.mjs
frontend/src/: index.css  main.jsx  router.jsx
frontend/src/api/: auth.js  client.js  invites.js  leases.js  maintenance.js  managers.js  notifications.js  offers.js  payments.js  properties.js  users.js
frontend/src/contexts/: AuthContext.jsx  ToastContext.jsx
frontend/src/hooks/: .gitkeep  useNotifications.js
frontend/src/lib/: format.js  maintenance.js  payment-strategies.js
frontend/src/mocks/: browser.js  db.js  handlers.js
frontend/src/pages/: Forbidden.jsx  NotFound.jsx
gateway/: admin.py  auth.py  main.py  requirements.txt
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_property_manager.py
my-docs/: mkdocs.yml
my-docs/docs/: USER_GUIDE.md  index.md
services/notification_service/: handlers.py
shared/: events.py  factories.py
shared/db/: config.py  database.py  enums.py  models.py
shared/repositories/: __init__.py  base.py
shared/schemas/: __init__.py  analytics_schemas.py  lease_request_schemas.py  lease_schemas.py  maintenance_schemas.py  notification_schemas.py  payment_schemas.py  property_schemas.py  user_schemas.py
tests/: __init__.py  conftest.py  test_api.py  test_lease_requests.py  test_maintenance.py  test_migrations.py  test_notifications.py  test_payments.py  test_properties_leases.py
(+78 files in other folders)
